[package]
name = "newsd"
version = "0.1.0"
edition = "2021"

[dependencies]
feed-rs = "1.1.0"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
actix-web = { version = "4.1.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.20"