[package]
name = "newsd"
version = "0.1.0"
edition = "2021"

[dependencies]
feed-rs = { version = "1.1.0", default-features = false }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.20.1", default-features = false }
rusqlite = { version = "0.28.0", default-features = false }
actix-web = { version = "4.1.0", default-features = false, features = ["macros"] }
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.83", default-features = false }
chrono = { version = "0.4.20", default-features = false }

[profile.release]
opt-level = "s"
strip = true
